--- a/public/partials/tags_modal.html
+++ b/public/partials/tags_modal.html
@@ -1,7 +1,10 @@
-<div class="tags-modal-header"></div>
-<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-<h3>Add ALL of the tags!</h3>
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+  <h3>Add ALL of the tags!</h3>
 </div>
-<div class="tags-modal-body">
+<div class="modal-body">
   Here's your link: {{modal.content}}
+</div>
+<div class='modal-footer'>
+  <button class='btn' ng-click='hide()'>Close</button>
 </div>
