--- a/public/partials/tags_modal.html
+++ b/public/partials/tags_modal.html
@@ -6,10 +6,10 @@
   Here's your link: {{item.link}} <br/>
   What tags would you like to add? <input type="text" ng-model="tag"/>
   <button ng-click='addTag(tag)'>Add</button>
-  <div ng-repeat="tag in tags">
+  <div ng-repeat="tag in item.tags">
     <div class="tag">{{tag}}</div>
   </div>
 </div>
 <div class='modal-footer'>
-  <button class="btn">Submit</button>
+  <button class="btn" ng-click="send()">Submit</button>
 </div>
