--- a/public/partials/tags_modal.html
+++ b/public/partials/tags_modal.html
@@ -11,5 +11,5 @@
   </div>
 </div>
 <div class='modal-footer'>
-  <button class="btn" ng-click="send()">Submit</button>
+  <button class="btn" ng-click="send();hide()">Submit</button>
 </div>
