--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,4 +1,4 @@
-<h1>{{cur.tag}}</h1>
-<div ng-repeat='link in cur.tagLinks'>
+<h1>{{tag}}</h1>
+<div ng-repeat='link in links'>
   <div class='linkDiv'>{{link}}</div>
 </div>
