--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,4 +1,10 @@
 <h1> {{tag}} </h1>
 <div ng-repeat='link in links'>
-  <div class='linkDiv'>{{link}}</div>
+  <div class='link-container'>
+    <div class="link-url">{{link}}</div>
+    <div class="vote-container">
+      <div ng-click="vote(1)">+</div>
+      <div ng-click="vote(-1)">-</div>
+    </div>
+  </div>
 </div>
