--- a/public/partials/home_view.html
+++ b/public/partials/home_view.html
@@ -1,3 +1,3 @@
 <div ng-repeat="tag in tags">
-  <div class='home-tags' ng-click='changeView(tag)'>{{tag}}</div>
+  <div class='home-tags' ng-click='changeView(tag)'>{{tag.name}}</div>
 </div>
