--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,7 +1,7 @@
 <h1> {{tag.name}} </h1>
 <div ng-repeat='link in links'>
   <div class='link-container'>
-    <div class="link-url">{{link.url}}</div>
+    <div class="link-url">{{link.link}}</div>
     <div class="vote-container">
       <div>{{link.score}}</div>
       <div ng-click="vote(1, link)">+</div>
