--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,4 +1,4 @@
-<h1> {{tag.name}} </h1>
+<h1> {{tag}} </h1>
 <div ng-repeat='link in links'>
   <div class='link-container'>
     <div class="link-url">{{link.link}}</div>
