--- a/css/styles.styl
+++ b/css/styles.styl
@@ -1,9 +1,10 @@
 //Variables
-@import 'variables/_colors.styl'
-@import 'variables/_measures.styl'
+import_tree('./variables')
+
 //Files
 @import '_tag-box.styl'
 @import '_basic-layout.styl'
+@import '_nav.styl'
 
 .main-container
   font-family source-sans-pro, sans-serif
