--- a/css/styles.styl
+++ b/css/styles.styl
@@ -13,3 +13,4 @@ import_tree('./imports/variables')
 //Files
 @import ('./imports/components/_main-input.styl')
 @import ('./imports/components/_nav.styl')
+@import ('./imports/components/_header.styl')
