added title component and big-tag id home-page tags

--- a/public/partials/home_view.html
+++ b/public/partials/home_view.html
@@ -1,3 +1,4 @@
-<div ng-repeat="tag in tags">
+<div id='homepage-title' class='title'>Find the best articles on anything.</div>
+<div id='big-tags' ng-repeat="tag in tags">
   <div class='home-tags' ng-click='changeView(tag.name)'>{{tag.name}}</div>
 </div>
