--- a/css/styles.styl
+++ b/css/styles.styl
@@ -11,6 +11,9 @@ global-reset()
 import_tree('./imports/variables')
 
 //Files
+@import ('./imports/components/_basic-layout.styl')
+@import ('./imports/components/_big-tags.styl')
 @import ('./imports/components/_main-input.styl')
 @import ('./imports/components/_nav.styl')
 @import ('./imports/components/_header.styl')
+@import ('./imports/components/_title.styl')
