--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,22 @@ table{border-collapse:separate;border-spacing:0;vertical-align:middle}
 caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}
 a img{border:none}
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-.main-input{-webkit-transition:background-color 0.3s ease;-moz-transition:background-color 0.3s ease;-o-transition:background-color 0.3s ease;-ms-transition:background-color 0.3s ease;transition:background-color 0.3s ease;background-color:#333;display:none;min-height:80px;position:relative;width:100%;}
+html{font-size:62.5%}
+.wf-loading body{opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}
+body{color:#333;}
+body #main-container{margin:0 auto;max-width:1200px;padding:0 0 40px}
+em{font-style:italic}
+a{text-decoration:none;}
+a :hover{text-decoration:underline}
+@media screen and (min-width: 600px){body{padding:0 3%}
+}#big-tags{font-size:0;margin:0 16px;}
+#big-tags div{-webkit-transition:border 0.1s ease color 0.1s ease;-moz-transition:border 0.1s ease color 0.1s ease;-o-transition:border 0.1s ease color 0.1s ease;-ms-transition:border 0.1s ease color 0.1s ease;transition:border 0.1s ease color 0.1s ease;border-bottom:1px solid #cfff73;color:#333;display:inline-block;font:400 3.6rem "source-sans-pro",arial,sans;height:80px;margin:5px 0;overflow:hidden;padding:30px 0 0 15px;text-decoration:none;-o-text-overflow:ellipsis;text-overflow:ellipsis;width:100%;white-space:nowrap}
+#big-tags.click-for-more{border-bottom:6px solid #333;}
+#big-tags.click-for-more:hover{border-bottom:6px solid #999;color:#333}
+#big-tags:hover{border-bottom:6px solid #333}
+@media screen-to-break-1{#big-tags{margin:0;}
+#big-tags div{margin:5px 2%;width:46%}
+}.main-input{-webkit-transition:background-color 0.3s ease;-moz-transition:background-color 0.3s ease;-o-transition:background-color 0.3s ease;-ms-transition:background-color 0.3s ease;transition:background-color 0.3s ease;background-color:#333;display:none;min-height:80px;position:relative;width:100%;}
 .main-input .main-input-text,.main-input .placeholder{-webkit-transition:color 0.3s ease;-moz-transition:color 0.3s ease;-o-transition:color 0.3s ease;-ms-transition:color 0.3s ease;transition:color 0.3s ease;background-color:transparent;color:#999;font:300 2.4rem "source-sans-pro",arial,sans;left:0;line-height:80px -22 -20;padding:22px 20px 20px;position:absolute;top:0;width:100%}
 .main-input .placeholder{overflow:hidden;white-space:nowrap}
 .main-input .icon{-webkit-transition:opacity 0.3s ease;-moz-transition:opacity 0.3s ease;-o-transition:opacity 0.3s ease;-ms-transition:opacity 0.3s ease;transition:opacity 0.3s ease;left:20px;opacity:.5;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter:alpha(opacity=50);position:absolute;top:20px}
@@ -45,3 +60,10 @@ header h1{cursor:pointer;display:inline-block;font:700 1.8rem "source-sans-pro",
 header h1 a{-webkit-transition:all 0.3s ease;-moz-transition:all 0.3s ease;-o-transition:all 0.3s ease;-ms-transition:all 0.3s ease;transition:all 0.3s ease;color:#d4d4d4}
 header h1 :hover a{color:#666;text-decoration:none}
 header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",arial,sans}
+.title{font:700 4.2rem "source-sans-pro",arial,sans;margin:80px 0 20px;padding:0 20px 10px;}
+.title #homepage-title{margin:60px 0 30px;padding:0 30px;text-align:center}
+.title #article-title,.title #big-tags-title{border-bottom:6px solid #333}
+@media screen-to-break-one{.title{font:700 5.4rem "source-sans-pro",arial,sans;}
+.title #homepage-title{margin:100px 0 60px;padding:0 80px}
+}@media screen-to-break-two{.title #articles-title{width:73%}
+}
