changed id to class

--- a/public/partials/home_view.html
+++ b/public/partials/home_view.html
@@ -1,4 +1,4 @@
 <div id='homepage-title' class='title'>Find the best articles on anything.</div>
-<div id='big-tags' ng-repeat="tag in tags">
+<div class='big-tags' ng-repeat="tag in tags">
   <div class='home-tags' ng-click='changeView(tag.name)'>{{tag.name}}</div>
 </div>
