started using @extend instead of direct call to mixin

--- a/css/imports/components/_main-input.styl
+++ b/css/imports/components/_main-input.styl
@@ -71,11 +71,10 @@
       color white
 
   #search-input .icon
-    sprite_mixin(0px, 80px, 40px, 40px)
+    @extend .sprite-search-white;
 
   #paste-link-input .icon
-    sprite_mixin(0px, 120px, 40px,   40px )
-
+    @extend .sprite-plus-white;
 
 
 
