changed to using classes that call the mixins (and then extending use of those classes elsewhere), rather than trying to set variables (which wasn't working)

--- a/css/imports/variables/_sprites.styl
+++ b/css/imports/variables/_sprites.styl
@@ -1,5 +1,17 @@
-// sprite-logo(          sprite_mixin(0px, 0px,   80px,   80px ))
-// sprite-search-white(  sprite_mixin(0px, 80px,  40px,   40px ))     
-// sprite-plus-white(    sprite_mixin(0px, 120px, 40px,   40px ))
-sprite-twitter-white = sprite_mixin(0px, 160px, 40px,   40px )
-// sprite-arrow-up-white(sprite_mixin(0px, 200px, 20px,   20px ))    
+.sprite-logo
+  sprite_mixin(0px, 0px,   80px, 80px)
+
+.sprite-search-white
+  sprite_mixin(0px, 80px,  40px, 40px)
+
+.sprite-plus-white
+  sprite_mixin(0px, 120px, 40px, 40px)
+
+.sprite-twitter-white
+  sprite_mixin(0px, 160px, 40px, 40px)
+
+.sprite-arrow-up-white
+  sprite_mixin(0px, 200px, 20px, 20px)
+
+.sprite-twitter-white
+  sprite_mixin(0px, 160px, 40px, 40px)
