fixed error in extend syntax

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -49,7 +49,7 @@
         transform rotate(45deg)
 
       &:before
-        @extend sprite-arrow-up-white
+        @extend .sprite-arrow-up-white
         content ""
         display inline-block
 
