--- a/css/styles.styl
+++ b/css/styles.styl
@@ -17,3 +17,4 @@ import_tree('./imports/variables')
 @import ('./imports/components/_nav.styl')
 @import ('./imports/components/_header.styl')
 @import ('./imports/components/_title.styl')
+@import ('./imports/components/_links.styl')
