--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ a img{border:none}
 .sprite-search-white,#search-input .icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -80px;height:40px;width:40px}
 .sprite-plus-white,#paste-link-input .icon{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -120px;height:40px;width:40px}
 .sprite-twitter-white{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -160px;height:40px;width:40px}
-.sprite-arrow-up-white{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -200px;height:20px;width:20px}
+.sprite-arrow-up-white,#links .votes .up-vote-this:before{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -200px;height:20px;width:20px}
 .sprite-twitter-white{background-image:url("../images/sprite.svg");background-repeat:no-repeat;background-position:0 -160px;height:40px;width:40px}
 html{font-size:62.5%}
 .wf-loading body{opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}
@@ -70,4 +70,19 @@ header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",a
 @media screen-to-break-one{.title{font:700 5.4rem "source-sans-pro",arial,sans;}
 .title #homepage-title{margin:100px 0 60px;padding:0 80px}
 }@media screen-to-break-two{.title #articles-title{width:73%}
+}#links .link{border-bottom:2px solid #fafafa;margin:40px 0 0;padding:0 24px 40px;position:relative}
+#links h1 a{color:#333;font:400 3.6rem "source-sans-pro",arial,sans;overflow:hidden}
+#links h2{color:#b3b3b3;font:sans-s-light;margin:10px 0 0;overflow:hidden}
+#links .votes{font-size:0;height:32px;margin:20px 0 0 10px;position:relative;width:90px;}
+#links .votes .up-vote-this{-webkit-border-radius:2px;border-radius:2px;-webkit-box-shadow:0 0 0 6px rgba(0,0,0,0.15);box-shadow:0 0 0 6px rgba(0,0,0,0.15);-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background:color #333;cursor:pointer;height:32px;left:0;padding:7px 0 0;position:absolute;text-align:center;top:0;width:32px;}
+#links .votes .up-vote-this .up-arrow{-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;background-color:#333;height:9px;margin:-5px -4px 0 0;position:absolute;right:0;top:50%;width:9px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}
+#links .votes .up-vote-this:before{content:"";display:inline-block}
+#links .votes .up-vote-this:hover,#links .votes .up-vote-this:hover .up-arrow{padding:4px 0 0;background-color:#666}
+#links .votes .up-vote-this:active,#links .votes .up-vote-this:active .up-arrow{-webkit-transition:all 0s ease;-moz-transition:all 0s ease;-o-transition:all 0s ease;-ms-transition:all 0s ease;transition:all 0s ease;background-color:#b8e864}
+#links .votes .up-vote-this .vote-count{color:#666;font:300 2.4rem "source-sans-pro",arial,sans;left:46px;position:absolute;top:5px}
+@media screen-to-break-one{#links{margin:60px 0 0;}
+#links .link{border-bottom:none;padding:0 30px 30px 160px;}
+#links .link .votes{left:25px;margin:0;position:absolute;top:1px;width:auto;}
+#links .link .votes .vote-count{font:300 3.2rem "source-sans-pro",arial,sans;top:2px}
+}@media screen-to-break-two{#links{width:73%}
 }
