took out ng-click while we're still using fake data

--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -7,10 +7,10 @@
     <a href='#'>more on Wikipedia...</a>
   </p>
   <div class='related-tags'>
-    <div ng-click='changeView(tag.name)'>Frameworks</div>
-    <div ng-click='changeView(tag.name)'>AWS</div>
-    <div ng-click='changeView(tag.name)'>Java</div>
-    <div ng-click='changeView(tag.name)'>Android</div>
+    <div>Frameworks</div>
+    <div>AWS</div>
+    <div>Java</div>
+    <div>Android</div>
   </div>
 </aside>
 <ul id='links'>
