added about styles, and changed media query varibale names

--- a/css/imports/components/_main-input.styl
+++ b/css/imports/components/_main-input.styl
@@ -53,7 +53,7 @@
     height: auto
 
 
-@media screen_to_break_one
+@media screen-to-break-one
   .main-input
     border-left 1px solid $go-grey
     display inline-block
