--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -47,7 +47,7 @@ nav
       font $sans-xxs
       margin-top -7px
 
-@media screen_to_break_one
+@media screen-to-break-one
   nav
     padding 0 $block
 
