--- a/css/imports/variables/_media_queries.styl
+++ b/css/imports/variables/_media_queries.styl
@@ -1,3 +1,3 @@
-screen_to_break_one = 'screen and (min-width: '+ $break-one +')'
+screen-to-break-one = 'screen and (min-width: '+ $break-one +')'
 
-screen_to_break_two = 'screen and (min-width: '+ $break-two +')'
+screen-to-break-two = 'screen and (min-width: '+ $break-two +')'
