updated styles generally and added about styles

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -18,3 +18,4 @@ import_tree('./imports/variables')
 @import ('./imports/components/_header.styl')
 @import ('./imports/components/_title.styl')
 @import ('./imports/components/_links.styl')
+@import ('./imports/components/_about.styl')
