fix search to use tags available in database.  fix search autocomplete dropdown display.

--- a/css/imports/components/_main-input.styl
+++ b/css/imports/components/_main-input.styl
@@ -76,7 +76,12 @@
   #paste-link-input .icon
     @extend .sprite-plus-white;
 
+  .typeahead.dropdown-menu
+    width 100%
 
+  .typeahead.dropdown-menu li
+    color black
+    font-size 2rem
 
 
 
