changing style files for links, nav, and title, also adding styl file for displayFrameDirective, which is a WIP

--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -27,8 +27,20 @@ nav
       background-color $ge-grey
 
 
-  #logo
+  #logo-main
     sprite_mixin(0px, 0px, 80px, 80px)
+
+  #logo-github
+    sprite_mixin(0px, 220px, 60px, 60px)
+    margin-top 10px
+    margin-left 10px
+
+  .login_logout{
+    position relative
+    top 2px
+    color white
+  }
+
 
   #search-input-tab .tab-icon
     sprite_mixin(0px, 80px, 40px, 40px )
