--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -5,39 +5,97 @@
     padding 0 24px 40px
     position relative
 
-  h1 a
-    color $ho-grey
-    font $sans-m
-    overflow hidden
+    .title-wrap 
+      max-height  200px
+      h1 
+        width 500px
+        a
+        color $ho-grey
+        font $sans-m
+        white-space nowrap
+        width 100%            
+        overflow hidden   /* "overflow" value must be different from "visible" */ 
+        text-overflow ellipsis  // text-overflow ellipsis
 
-  h2
-    color $co-grey
-    font sans-s-light
-    margin 10px 0 0;
-    overflow hidden
+    .preview-logo{
+      sprite_mixin(0px, 280px, 60px, 60px)
+    }    
 
-  .votes
-    font-size 0
-    height 32px
-    margin 20px 0 0 10px
-    position relative
-    width 90px
+    h2
+      color $co-grey
+      font sans-s-light
+      margin 10px 0 0
+      overflow hidden
 
-    .up-vote-this
+    .votes
+      font-size 0
+      height 32px
+      margin 20px 0 0 10px
+      position relative
+      width 90px
+
+      .up-vote-this
+        border-radius 2px
+        box-shadow 0 0 0 6px rgba(0,0,0,0.15)
+        transition all 0.2s ease
+        background-color $ho-grey
+        cursor pointer
+        height 32px
+        left 0
+        padding 7px 0 0
+        position absolute
+        text-align center
+        top 0
+        width 32px
+
+        .up-arrow
+          transition all 0.2s ease
+          background-color $ho-grey
+          height 9px 
+          margin -5px -4px 0 0
+          position absolute
+          right 0
+          top 50%
+          width 9px
+          transform rotate(45deg)
+
+        &:before
+          @extend .sprite-arrow-up-white
+          content ""
+          display inline-block
+
+        &:hover
+        &:hover .up-arrow
+          padding 4px 0 0
+          background-color $fo-grey
+
+        &:active
+        &:active .up-arrow
+          transition all 0s ease
+          background-color $green-med
+
+      .vote-count
+        color $fo-grey
+        font $sans-s-light
+        left 46px
+        position absolute
+        top 12px
+
+    .down-vote-this
       border-radius 2px
       box-shadow 0 0 0 6px rgba(0,0,0,0.15)
       transition all 0.2s ease
-      background color $ho-grey
+      background-color $ho-grey
       cursor pointer
       height 32px
       left 0
       padding 7px 0 0
       position absolute
       text-align center
-      top 0
+      top 50px;
       width 32px
 
-      .up-arrow
+      .down-arrow {
         transition all 0.2s ease
         background-color $ho-grey
         height 9px 
@@ -47,29 +105,22 @@
         top 50%
         width 9px
         transform rotate(45deg)
+      }
 
       &:before
-        @extend .sprite-arrow-up-white
+        @extend .sprite-arrow-down-white
         content ""
         display inline-block
 
       &:hover
-      &:hover .up-arrow
-        padding 4px 0 0
+      &:hover .down-arrow
+        padding 9px 0 0
         background-color $fo-grey
 
-      &:active
-      &:active .up-arrow
-        transition all 0s ease
-        background-color $green-med
-
-      .vote-count
-        color $fo-grey
-        font $sans-s-light
-        left 46px
-        position absolute
-        top 5px
-
+      // &:active
+      // &:active .down-arrow
+      //   transition all 0s ease
+      //   background-color $green-med
 
 @media screen-to-break-one
   #links
@@ -88,7 +139,7 @@
 
         .vote-count
           font $sans-ms-light
-          top 2px
+          top 22px
 
 
 @media screen-to-break-two
