--- a/css/imports/components/_title.styl
+++ b/css/imports/components/_title.styl
@@ -1,6 +1,6 @@
 .title
   font $sans-ml-bold
-  margin 80px 0px 20px
+  margin 30px 0px 20px
   padding 0 20px 10px
 
   #homepage-title
@@ -8,8 +8,9 @@
     padding 0 30px
     text-align center
 
-  #article-title, #big-tags-title
+ #articles-title, #big-tags-title
     border-bottom 6px solid $ho-grey
+    width 73%
 
 @media screen-to-break-one
   .title
