--- a/css/imports/variables/_sprites.styl
+++ b/css/imports/variables/_sprites.styl
@@ -13,5 +13,8 @@
 .sprite-arrow-up-white
   sprite_mixin(0px, 200px, 20px, 20px)
 
+.sprite-arrow-down-white
+  sprite_mixin(40px, 200px, 20px, 20px)
+
 .sprite-twitter-white
   sprite_mixin(0px, 160px, 40px, 40px)
