brought back in tag box styling

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,7 +113,10 @@ header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",a
 #about img{max-height:none}
 #about .stat{border-bottom:2px solid #ebebeb;margin:0;padding:25px 0 8px 5%}
 #about .tags{display:block}
-}#preview-pane{position:absolute;right:0;height:100%;width:25%;margin-right:50px;border:1px dashed #000;overflow:scroll;display:none;}
+}.tag{border:1px solid #000;-webkit-border-radius:3px;border-radius:3px;display:inline-block;float:left;margin:0 5px;padding:3px 12px;position:relative;cursor:pointer}
+.tag:after{right:2px;top:-5px;content:'x';font-size:10px;position:absolute}
+.tag:hover{background-color:#808080}
+#preview-pane{position:absolute;right:0;height:100%;width:25%;margin-right:50px;border:1px dashed #000;overflow:scroll;display:none;}
 #preview-pane #close-preview{position:absolute;top:10px;right:10px;background:#00f;width:10px;height:10px}
 .site-thumbnail-container{width:200px;height:200px;overflow:hidden}
 .site-thumbnail{width:200px;cursor:pointer}
