--- a/css/styles.styl
+++ b/css/styles.styl
@@ -19,5 +19,7 @@ import_tree('./imports/variables')
 @import ('./imports/components/_title.styl')
 @import ('./imports/components/_links.styl')
 @import ('./imports/components/_about.styl')
+@import ('./imports/components/_tag-box.styl')
 @import ('./imports/components/_displayFrameDirective.styl')
+
 
