--- a/css/imports/components/_displayFrameDirective.styl
+++ b/css/imports/components/_displayFrameDirective.styl
@@ -15,13 +15,8 @@
     width 10px
     height 10px
 
-.site-thumbnail-container
-  width 200px 
-  height 200px 
-  overflow hidden
-
-.site-thumbnail
-  width 200px
-  cursor pointer
+.preview-logo
+  color white
+  // background blue
 
   
