--- a/css/imports/components/_title.styl
+++ b/css/imports/components/_title.styl
@@ -3,14 +3,15 @@
   margin 30px 0px 20px
   padding 0 20px 10px
 
-  #homepage-title
-    margin 60px 0 30px
-    padding 0 30px
-    text-align center
+#homepage-title
+  margin 0 auto
+  text-align center
+  padding 0 30px
+  // width 60%
 
- #articles-title, #big-tags-title
-    border-bottom 6px solid $ho-grey
-    width 73%
+#articles-title, #big-tags-title
+  border-bottom 6px solid $ho-grey
+  width 73%
 
 @media screen-to-break-one
   .title
