--- a/css/imports/variables/_colors.styl
+++ b/css/imports/variables/_colors.styl
@@ -1,6 +1,7 @@
 $green-light = #CFFF73
 $green-med =   #B8E864
 $green-dark =  #9DDE64
+$bluegreen = #7FFFD4
 
 $oa-grey = #FCFCFC
 $ob-grey = #FAFAFA
