updating partials for home and tag views

--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -1,4 +1,4 @@
-<div class='title' id='articles-title'>{{tag}}</div> 
+<h1 class='title' id='articles-title'>{{tag}}</h1> 
 <aside id='about'>
   <p>
     This topic is critical to computer science. Absolutely critical. You should totally 
@@ -30,11 +30,9 @@
       </div>
       <div class='vote-count'>{{link.score}}</div>
     </div>
-    <div class='site-thumbnail-container'>
-    <!-- <img class='site-thumbnail' src='/item_images/{{ link.id }}.png' show-frame></img> -->
     <div class='preview-logo' show-frame></div>
   </li>
-</div>
+</ul>
 <div id='preview-pane'>
   <img></img>
   <div id='close-preview'>
