started styling for modal

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -20,6 +20,7 @@ import_tree('./imports/variables')
 @import ('./imports/components/_links.styl')
 @import ('./imports/components/_about.styl')
 @import ('./imports/components/_tag-box.styl')
+@import ('./imports/components/_modal.styl')
 @import ('./imports/components/_displayFrameDirective.styl')
 
 
