--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,12 +21,13 @@ a{text-decoration:none;}
 a :hover{text-decoration:underline}
 @media screen and (min-width: 600px){body{padding:0 3%}
 }.big-tags{font-size:0;margin:0 16px;}
-.big-tags div{-webkit-transition:border 0.1s ease color 0.1s ease;-moz-transition:border 0.1s ease color 0.1s ease;-o-transition:border 0.1s ease color 0.1s ease;-ms-transition:border 0.1s ease color 0.1s ease;transition:border 0.1s ease color 0.1s ease;border-bottom:1px solid #cfff73;color:#333;display:inline-block;font:400 3.6rem "source-sans-pro",arial,sans;height:80px;margin:5px 0;overflow:hidden;padding:30px 0 0 15px;text-decoration:none;-o-text-overflow:ellipsis;text-overflow:ellipsis;width:100%;white-space:nowrap}
-.big-tags.click-for-more{border-bottom:6px solid #333;}
-.big-tags.click-for-more:hover{border-bottom:6px solid #999;color:#333}
-.big-tags:hover{border-bottom:6px solid #333}
-@media screen-to-break-1{#big-tags{margin:0;}
-#big-tags div{margin:5px 2%;width:46%}
+.big-tags a{-webkit-transition:border 0.1s ease color 0.1s ease;-moz-transition:border 0.1s ease color 0.1s ease;-o-transition:border 0.1s ease color 0.1s ease;-ms-transition:border 0.1s ease color 0.1s ease;transition:border 0.1s ease color 0.1s ease;border-bottom:2px solid #7fffd4;color:#333;display:inline-block;font:400 3.6rem "source-sans-pro",arial,sans;height:80px;margin:5px 1%;overflow:hidden;padding:30px 0 0 15px;text-decoration:none;-o-text-overflow:ellipsis;text-overflow:ellipsis;width:100%;white-space:nowrap;}
+.big-tags a:hover{border-bottom:6px solid #999;color:#333;-webkit-transition:all 0.2s ease;-moz-transition:all 0.2s ease;-o-transition:all 0.2s ease;-ms-transition:all 0.2s ease;transition:all 0.2s ease;cursor:pointer}
+.big-tags.click-for-more{border-bottom:6px solid #333}
+@media screen and (min-width: 600px){.big-tags{margin:0;}
+.big-tags a{margin:5px 1%;width:46%}
+}@media screen and (min-width: 1000px){.big-tags{margin:0;}
+.big-tags a{margin:5px 1%;width:23%}
 }.main-input{-webkit-transition:background-color 0.3s ease;-moz-transition:background-color 0.3s ease;-o-transition:background-color 0.3s ease;-ms-transition:background-color 0.3s ease;transition:background-color 0.3s ease;background-color:#333;display:none;min-height:80px;position:relative;width:100%;}
 .main-input .main-input-text,.main-input .placeholder{-webkit-transition:color 0.3s ease;-moz-transition:color 0.3s ease;-o-transition:color 0.3s ease;-ms-transition:color 0.3s ease;transition:color 0.3s ease;background-color:transparent;color:#999;font:300 2.4rem "source-sans-pro",arial,sans;left:0;line-height:80px -22 -20;padding:22px 20px 20px;position:absolute;top:0;width:100%}
 .main-input .placeholder{overflow:hidden;white-space:nowrap}
@@ -70,8 +71,8 @@ header h1{cursor:pointer;display:inline-block;font:700 1.8rem "source-sans-pro",
 header h1 a{-webkit-transition:all 0.3s ease;-moz-transition:all 0.3s ease;-o-transition:all 0.3s ease;-ms-transition:all 0.3s ease;transition:all 0.3s ease;color:#d4d4d4}
 header h1 :hover a{color:#666;text-decoration:none}
 header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",arial,sans}
-.title{font:700 4.2rem "source-sans-pro",arial,sans;margin:30px 0 20px;padding:0 20px 10px;}
-.title #homepage-title{margin:60px 0 30px;padding:0 30px;text-align:center}
+.title{font:700 4.2rem "source-sans-pro",arial,sans;margin:30px 0 20px;padding:0 20px 10px}
+#homepage-title{margin:0 auto;text-align:center;padding:0 30px}
 #articles-title,#big-tags-title{border-bottom:6px solid #333;width:73%}
 @media screen and (min-width: 600px){.title{font:700 5.4rem "source-sans-pro",arial,sans;}
 .title #homepage-title{margin:100px 0 60px;padding:0 80px}
@@ -118,5 +119,4 @@ header h2{color:#b8e864;display:inline-block;font:300 1.8rem "source-sans-pro",a
 .tag:hover{background-color:#808080}
 #preview-pane{position:absolute;right:0;height:100%;width:25%;margin-right:50px;border:1px dashed #000;overflow:scroll;display:none;}
 #preview-pane #close-preview{position:absolute;top:10px;right:10px;background:#00f;width:10px;height:10px}
-.site-thumbnail-container{width:200px;height:200px;overflow:hidden}
-.site-thumbnail{width:200px;cursor:pointer}
+.preview-logo{color:#fff}
