added popover css file to imports

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -21,5 +21,4 @@ import_tree('./imports/variables')
 @import ('./imports/components/_about.styl')
 @import ('./imports/components/_tag-box.styl')
 @import ('./imports/components/_displayFrameDirective.styl')
-
-
+@import ('./imports/components/_popover.styl')
